# lsd

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  install.sh  readme.md
.github/workflows/: c-cpp.yml
src/: lsd.cpp  lsd.h  lsd_pty.cpp  lsd_pty.h  main.cpp  shader.frag  shader.vert  tty.cpp  tty.h
src/config/: config.cpp  config.h
src/parse/: ansi_parser.h  csi_parser.h  osc_parser.h
src/shaders/: bg.frag
src/types/: lsd_types.h
tests/: echo_test.cpp
